# PFunc

./: .gitattributes  AUTHORS  BuildDocs.cmake  CMakeLists.txt  CONTRIBUTORS  INSTALL  IOS-Book-Article.cls  LICENSE  Makefile  TODO  attribute.tex  cilk.hpp  cond.hpp  config.h.in  copy_tex_sources.pl  custom.tex  doxygen.config.in  environ.hpp  event.hpp  fibonacci.tex  introduction.tex  itemset-defs.tex  lifo.hpp  loops.tex  mutex.hpp  no_copy.hpp  pack.tex  pfunc-defs.tex  pfunc.tex  predicate.hpp  refs.bib  sig-alternate.cls  spawn.tex  squeeze.tex  sync.tex  task.hpp  template.txt  thrdperf.c  thread.hpp  tutorial-defs.tex  (+3 more)
.coin-or/: projDesc.xml
0.1/: AUTHORS  CMakeLists.txt
0.1/examples/c/: groups.c  simple.c
0.1/examples/cxx/: CMakeLists.txt  fibonacci.cpp
0.1/lib/: pfunc_pack.cpp
0.1/perf_tests/: Makefile  pfunc_barrier_time.cpp  rtc.c
0.1/pfunc/: CMakeLists.txt  cond.hpp  config.h.in  futex.h  perf.hpp  pfunc.h  prio.hpp  thread.hpp
0.1/pfunc/asm/: generic.h  windows.h  x86.h
0.1/pfunc/cmake_tests/: sched_affinity.cpp
0.1/tutorial/: CMakeLists.txt  fibonacci.tex  group.tex
0.1/tutorial/figs/: attributes.eps
0.1/tutorial/opencl/figs/: work_groups.fig
0.1/tutorial/presentation/: presentation.tex
CMake/: tex_to_dvi.pl
asm/: ppc.h
cgresults/: cg_10.eps  cg_10.out  cg_12.eps  cg_2.eps  cg_4.eps  cg_6.out  cg_8.eps  results.txt
cmake_tests/: tls.cpp
concepts/: ForExecutable.concept.ipp  PFuncTask.concept.ipp  PartialOrder.concept.ipp  ReduceExecutable.concept.ipp  WhileExecutable.concept.ipp
cplex-present/: Makefile  presentation.tex
cxx/: fibonacci.cpp  for.cpp  matmult.cpp  while.cpp
cxx/dot_reader/: README  dot.y
dagresults/: dag_speedup.eps
examples/c/: CMakeLists.txt  groups.c
examples/cxx/: CMakeLists.txt  fibonacci.cpp  for.cpp  matmult.cpp  reduce.cpp  square_matrix_multiply.cpp  while.cpp
examples/cxx/dot_reader/: dag.h  dot.l
examples/cxx/inputs/: test.dot
figs/: Makefile  dag.dot  dag.eps  dag.fig  dataflow.dot  deadlock.eps  deadlock.fig  fib.eps  fim_8.eps  itemset.dot  life-cycle.eps  load_balance.eps  load_balance.perf  lu.eps  lu.fig  memory_g7jac200.eps  memory_g7jac200.plt  memory_twotone.eps  openmp.eps  stealing.eps  stealing.fig  temp.dot
figs/memory_numbers/: cilk.g7jac200.dot.8  omp.twotone.dot.8  pfunc_dag_data.g7jac200.dot.8  pfunc_dag_data.twotone.dot.8  pfunc_dag_heap.g7jac200.dot.8  pfunc_dag_heap.twotone.dot.8  pfunc_dag_heap_all.twotone.dot.8
fimresults/: fim_8.eps  fim_8.out  fim_8_ipc.out  fim_8_l1.out  parse.py
lib/: pfunc_c.cpp
opencl/: presentation.tex
opencl/figs/: Makefile  kernel.fig  memory.fig
other/: fibonacci.cilk
papers/: CMakeLists.txt
papers/hipc/: CMakeLists.txt  IEEEtran.cls  dag-defs.tex  dag.tex
papers/hipc/figs/: dag_speedup.perf  dataflow.eps  fib.fig  getmaxmem.sh  memory_twotone.plt  stealing.dot
papers/hipc/figs/memory_numbers/: cilk.twotone.dot.8  omp.g7jac200.dot.8  pfunc_dag_heap_all.g7jac200.dot.8  tbb.g7jac200.dot.8  tbb.twotone.dot.8
papers/parco/: itemset.tex
papers/sc/: CMakeLists.txt  pfunc.tex
papers/sc/cgresults/: cg_12.out  cg_2.out  cg_4.out  cg_6.eps  cg_8.out  genstats.py  parse.py
papers/sc/dagresults/: dag_memory.eps  dag_memory.perf
papers/sc/figs/: dag.eps  itemset.eps  pfunc.dot
papers/sc/fimresults/: fim_8_dtlb.out  genstats.py
perf_tests/: CMakeLists.txt  cancel_threads.c  mutex_test.cpp  pfunc_barrier_time.cpp  thrdperf.c  virtual_fn_cost.cpp
pfunc/: CMakeLists.txt  attribute.hpp  cilk.hpp  cond.hpp  config.h.in  environ.hpp  exception.hpp  fifo.hpp  futex.h  generator.hpp  group.hpp  lifo.hpp  mutex.hpp  parallel_for.hpp  parallel_reduce.hpp  parallel_while.hpp  pfunc.hpp  pfunc_atomics.h  predicate.hpp  prio.hpp  space_1D.hpp  task.hpp  task_queue_set.hpp  taskmgr.hpp  thread.hpp  trampolines.hpp  utility.h
pfunc/asm/: windows.h
pfunc/cmake_tests/: futex.cpp  yield.c
pfunc/concepts/: AdaptableCallableN.concept.ipp  ForExecutable.concept.ipp  Generator.concept.ipp  ReduceExecutable.concept.ipp  SchedulingPolicy.concept.ipp  Space.concept.ipp  TaskPredicate.concept.ipp  TaskQueueSet.concept.ipp  WhileExecutable.concept.ipp
pfunc/experimental/: ForExecutable.concept.ipp  ReduceExecutable.concept.ipp  Space.concept.ipp  WhileExecutable.concept.ipp  parallel_for.hpp  parallel_reduce.hpp  parallel_while.hpp  space_1D.hpp
presentation/: PFunc-EduPar-11.pptx  ParCO-short.ppt  ParCO.pptx
presentation/figs/: organization.eps
shashi-presentation/: presentation.tex
trunk/: CMakeLists.txt  README
trunk/examples/: CMakeLists.txt
trunk/examples/cxx/: CMakeLists.txt
trunk/examples/other/: tbb_fibonacci.cpp
trunk/perf_tests/: CMakeLists.txt  mutex_test.cpp
trunk/pfunc/: barrier.hpp  fifo.hpp  pfunc_atomics.h  pfunc_common.h  scheduler.hpp  taskmgr.hpp  thread.hpp  utility.h
trunk/pfunc/cmake_tests/: inline.c
trunk/tutorial/: exception.tex  introduction.tex  perf.tex  spawn.tex  tutorial.tex
trunk/tutorial/figs/: group.eps
trunk/tutorial/opencl/figs/: host_program.fig  platform.fig
trunk/tutorial/presentation/figs/: cg_8.eps
tutorial/: CMakeLists.txt  attribute.tex  custom.tex  design.tex  exception.tex  generate.tex  group.tex  initialize.tex  install.tex  introduction.tex  loops.tex  pack.tex  perf.tex  tutorial-defs.tex  tutorial.tex
tutorial/figs/: architecture.eps  custom.eps  functors.eps  runtime.eps  scheduling.eps
tutorial/opencl/: Makefile
tutorial/presentation/: Makefile
tutorial/presentation/figs/: fim_8.eps  functors.eps  pfunc.eps
